[package]
name = "ash-gltf"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
ash = "0.38.0"
ash-window = "0.13.0"
bytemuck = "1.20.0"
cgmath = "0.18.0"
egui = "0.29.1"
env_logger = "0.11.5"
gltf = "1.4.1"
image = "0.25.5"
log = "0.4.22"
vk-mem = "0.4.0"
vk-shader-macros = "0.2.10"
winit = "0.29.11"
